--- a/DetroitLionsTrackerApi.DataLayer/DetroitLionsTrackerApi.DataLayer.csproj
+++ b/DetroitLionsTrackerApi.DataLayer/DetroitLionsTrackerApi.DataLayer.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.3" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DetroitLionsTrackerApi.Models\DetroitLionsTrackerApi.Models.csproj" />
+  </ItemGroup>
+
 </Project>
