Adding Season CRUD
Adding Season CRUD

--- a/DetroitLionsTrackerApi.BusinessLayer.Interfaces/DetroitLionsTrackerApi.BusinessLayer.Interfaces.csproj
+++ b/DetroitLionsTrackerApi.BusinessLayer.Interfaces/DetroitLionsTrackerApi.BusinessLayer.Interfaces.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DetroitLionsTrackerApi.Models\DetroitLionsTrackerApi.Models.csproj" />
+  </ItemGroup>
+
 </Project>
