--- a/DetroitLionsTrackerApi.BusinessLayer/DetroitLionsTrackerApi.BusinessLayer.csproj
+++ b/DetroitLionsTrackerApi.BusinessLayer/DetroitLionsTrackerApi.BusinessLayer.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DetroitLionsTrackerApi.BusinessLayer.Interfaces\DetroitLionsTrackerApi.BusinessLayer.Interfaces.csproj" />
+    <ProjectReference Include="..\DetroitLionsTrackerApi.DataLayer.Interfaces\DetroitLionsTrackerApi.DataLayer.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
