--- a/DetroitLionsTrackerApi.DataLayer.Interfaces/DetroitLionsTrackerApi.DataLayer.Interfaces.csproj
+++ b/DetroitLionsTrackerApi.DataLayer.Interfaces/DetroitLionsTrackerApi.DataLayer.Interfaces.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DetroitLionsTrackerApi.Models\DetroitLionsTrackerApi.Models.csproj" />
+  </ItemGroup>
+
 </Project>
