Adding Migration Functionality
Adding Migration Functionality

--- a/DetroitLionsTrackerApi/DetroitLionsTrackerApi.csproj
+++ b/DetroitLionsTrackerApi/DetroitLionsTrackerApi.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>397805fa-63d0-45ff-a973-3c9d38fede8b</UserSecretsId>
+    <StartupObject></StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
